--- a/style.css
+++ b/style.css
@@ -27,6 +27,9 @@ margin: 6rem;
     border-top-right-radius: 0.5rem;
     border-bottom-right-radius: 0.5rem;
 }
+.img{
+    height: 2.6rem;
+}
 .button{
     font-size: 1rem;
     font-weight: bold;
